# mom

./: .gitignore  README-CN.md  README.md  pyproject.toml
mom/: __init__.py
mom/core/: __init__.py  core.py
tests/: test_core.py
