[project]
name = "mom"
version = "0.1.0"
description = "A powerful Python toolkit for building LLM (Large Language Model)-oriented applications and middleware"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "puras", email = "puras.he@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Framework :: AsyncIO",
]

[project.urls]
"Homepage" = "https://github.com/puras/mom"
"Bug Tracker" = "https://github.com/puras/mom/issues"
"Source Code" = "https://github.com/puras/mom"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.0.280",
    "mypy>=1.5",
]

test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
